@@ -5,14 +5,11 @@ import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
 
-import javax.sql.DataSource;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
-import org.springframework.jdbc.core.simple.ParameterizedRowMapper;
-import org.springframework.jdbc.core.support.JdbcDaoSupport;
+import org.springframework.jdbc.core.RowMapper;
 
 import com.springapp.domain.Product;
 
@@ -44,16 +41,15 @@ public class JdbcProductDao implements ProductDao {
         		new Object[] { prod.getDescription(), prod.getPrice(), prod.getId() });
     }
     
-    private static class ProductMapper implements ParameterizedRowMapper<Product> {
+    private static class ProductMapper implements RowMapper<Product> {
 
         public Product mapRow(ResultSet rs, int rowNum) throws SQLException {
             Product prod = new Product();
             prod.setId(rs.getInt("id"));
             prod.setDescription(rs.getString("description"));
-            prod.setPrice(new Double(rs.getDouble("price")));
+            prod.setPrice(Double.valueOf(rs.getDouble("price")));
             return prod;
         }
 
     }
-
 }
